--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,32 @@
 
     <groupId>com.github.wmifsud.sumo</groupId>
     <artifactId>sumo-logback-appender</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
+    <packaging>jar</packaging>
+
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Forked project which pushes logs to sumo-logic in json format</description>
+    <url>http://github.com/wmifsud/sumo-logback-appender</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Waylon Mifsud</name>
+            <email>waylonmifsud@gmail.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/wmifsud/sumo-logback-appender.git</connection>
+        <developerConnection>scm:git:ssh://github.com:wmifsud/sumo-logback-appender.git</developerConnection>
+        <url>http://github.com/wmifsud/sumo-logback-appender/tree/master</url>
+    </scm>
 
     <properties>
         <java.version>1.8</java.version>
@@ -40,41 +65,53 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--<plugin>-->
-                <!--<groupId>com.mycila.maven-license-plugin</groupId>-->
-                <!--<artifactId>maven-license-plugin</artifactId>-->
-                <!--<configuration>-->
-                    <!--<basedir>${basedir}</basedir>-->
-                    <!--<header>${basedir}/src/etc/header.txt</header>-->
-                    <!--<quiet>false</quiet>-->
-                    <!--<failIfMissing>true</failIfMissing>-->
-                    <!--<aggregate>false</aggregate>-->
-                    <!--<includes>-->
-                        <!--<include>src/**</include>-->
-                        <!--<include>**/test/**</include>-->
-                    <!--</includes>-->
-                    <!--<excludes>-->
-                        <!--<exclude>target/**</exclude>-->
-                        <!--<exclude>.clover/**</exclude>-->
-                    <!--</excludes>-->
-                    <!--<useDefaultExcludes>true</useDefaultExcludes>-->
-                    <!--<useDefaultMapping>true</useDefaultMapping>-->
-                    <!--<properties>-->
-                        <!--<year>${project.inceptionYear}</year>-->
-                        <!--<email>opensource@sumologic.com</email>-->
-                    <!--</properties>-->
-                    <!--<encoding>UTF-8</encoding>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>check</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadoc</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
